--- a/PhotoFlickr/Classes/Views/PKCustomCellViewController.xib
+++ b/PhotoFlickr/Classes/Views/PKCustomCellViewController.xib
@@ -64,7 +64,7 @@
 							<object class="IBUILabel" id="708308325">
 								<reference key="NSNextResponder" ref="479577970"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{43, 5}, {163, 15}}</string>
+								<string key="NSFrame">{{43, 5}, {150, 15}}</string>
 								<reference key="NSSuperview" ref="479577970"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="745447459"/>
@@ -75,17 +75,16 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText"/>
-								<object class="NSColor" key="IBUITextColor" id="670014106">
+								<object class="NSColor" key="IBUIHighlightedColor" id="670014106">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
-								<reference key="IBUIHighlightedColor" ref="670014106"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="240034222">
+								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
 									<double key="pointSize">12</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="616923852">
+								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">12</double>
 									<int key="NSfFlags">16</int>
@@ -106,17 +105,27 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText"/>
-								<reference key="IBUITextColor" ref="670014106"/>
+								<object class="NSColor" key="IBUITextColor" id="955141603">
+									<int key="NSColorSpace">3</int>
+									<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
+								</object>
 								<reference key="IBUIHighlightedColor" ref="670014106"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<reference key="IBUIFontDescription" ref="240034222"/>
-								<reference key="IBUIFont" ref="616923852"/>
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="299284846">
+									<int key="type">1</int>
+									<double key="pointSize">10</double>
+								</object>
+								<object class="NSFont" key="IBUIFont" id="369888487">
+									<string key="NSName">Helvetica</string>
+									<double key="NSSize">10</double>
+									<int key="NSfFlags">16</int>
+								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="745447459">
 								<reference key="NSNextResponder" ref="479577970"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{214, 5}, {99, 15}}</string>
+								<string key="NSFrame">{{201, 5}, {99, 15}}</string>
 								<reference key="NSSuperview" ref="479577970"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="843595463"/>
@@ -127,24 +136,17 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText"/>
-								<reference key="IBUITextColor" ref="670014106"/>
+								<reference key="IBUITextColor" ref="955141603"/>
 								<reference key="IBUIHighlightedColor" ref="670014106"/>
 								<int key="IBUIBaselineAdjustment">0</int>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="299284846">
-									<int key="type">1</int>
-									<double key="pointSize">10</double>
-								</object>
-								<object class="NSFont" key="IBUIFont" id="599744591">
-									<string key="NSName">Helvetica</string>
-									<double key="NSSize">10</double>
-									<int key="NSfFlags">16</int>
-								</object>
+								<reference key="IBUIFontDescription" ref="299284846"/>
+								<reference key="IBUIFont" ref="369888487"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 							<object class="IBUILabel" id="135696751">
 								<reference key="NSNextResponder" ref="479577970"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{214, 20}, {99, 15}}</string>
+								<string key="NSFrame">{{232, 20}, {76, 15}}</string>
 								<reference key="NSSuperview" ref="479577970"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="59317184"/>
@@ -155,11 +157,11 @@
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<string key="IBUIText"/>
-								<reference key="IBUITextColor" ref="670014106"/>
+								<reference key="IBUITextColor" ref="955141603"/>
 								<reference key="IBUIHighlightedColor" ref="670014106"/>
 								<int key="IBUIBaselineAdjustment">0</int>
 								<reference key="IBUIFontDescription" ref="299284846"/>
-								<reference key="IBUIFont" ref="599744591"/>
+								<reference key="IBUIFont" ref="369888487"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
@@ -168,7 +170,7 @@
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="952510371"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
+						<object class="NSColor" key="IBUIBackgroundColor" id="818900983">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
@@ -184,10 +186,7 @@
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="479577970"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<object class="NSColor" key="IBUIBackgroundColor">
-					<int key="NSColorSpace">3</int>
-					<bytes key="NSWhite">MAA</bytes>
-				</object>
+				<reference key="IBUIBackgroundColor" ref="818900983"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<reference key="IBUIContentView" ref="479577970"/>
 			</object>
@@ -278,8 +277,8 @@
 							<reference ref="708308325"/>
 							<reference ref="843595463"/>
 							<reference ref="59317184"/>
-							<reference ref="745447459"/>
 							<reference ref="135696751"/>
+							<reference ref="745447459"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
